--- a/index.html.html
+++ b/index.html.html
@@ -16,7 +16,7 @@
       <label for="FORGET">FORGET</label>
       <input type="text" id="FORGET" name="FORGET"><br><br>
       <label for="pirate">pirate:</label>
-      <input   type="password"     id="pirate"       name="god oof thunder"
+      <input   type="password"     id="pirate"       name="god of thunder"
       max="40"><br>
 
     </form>
